Fix suggestion name being too long

--- a/poke-app/src/components/NavSearch/NavSearch.module.css
+++ b/poke-app/src/components/NavSearch/NavSearch.module.css
@@ -45,7 +45,6 @@ SUGGESTIONS
   display: flex;
   align-items: center;
   height: 60px;
-  text-overflow: ellipsis;
   font-size: 1.3em;
   overflow: hidden;
   cursor: pointer;
@@ -61,6 +60,11 @@ SUGGESTIONS
 }
 .suggestion__img {
   height: 60px;
+}
+.suggestion__name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .suggestion__text__hightlight {
   font-weight: 700;
